Commit ɑ2.5.3 (Key Additions)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       src="https://unpkg.com/default-passive-events"
     ></script>
   </body>
-  <footer class="dark:bg-dark-body-blue text-gray-500  text-xs ">
-    Created By - <a href="https://github.com/CODEatlasind" target="_blank" rel="noreferrer">CODEAtlasInd</footer>
+  <!-- <footer class="dark:bg-dark-body-blue text-gray-500  text-xs ">
+    Created By - <a href="https://github.com/CODEatlasind" target="_blank" rel="noreferrer">CODEAtlasInd</footer> -->
 </html>
